Bug 471131: NNTP: Incomplete loading of multiple inline images/content r/sr=bienvenu